bindata/approver-policy/resources/service_cert-manager-approver-policy-metrics.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cert-manager-approver-policy-metrics
  namespace: "cert-manager"
  labels:
    app: cert-manager-approver-policy
    app.kubernetes.io/name: cert-manager-approver-policy
    app.kubernetes.io/instance: cert-manager-approver-policy
    app.kubernetes.io/version: "v0.27.0"
    app.kubernetes.io/managed-by: cert-manager-operator
    app.kubernetes.io/part-of: cert-manager-operator
spec:
  type: ClusterIP
  ports:
    - port: 9402
      targetPort: 9402
      protocol: TCP
      name: metrics
  selector:
    app: cert-manager-approver-policy
